WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259468
utext_setup() can fail
https://bugs.webkit.org/show_bug.cgi?id=259468
Summary
utext_setup() can fail
Myles C. Maxfield
Reported
2023-07-24 19:48:05 PDT
utext_setup() can fail
Attachments
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2023-07-24 19:48:12 PDT
<
rdar://problem/112426537
>
Myles C. Maxfield
Comment 2
2023-07-24 19:50:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16058
EWS
Comment 3
2023-07-28 10:34:26 PDT
Committed
266388@main
(45a531fbee9a): <
https://commits.webkit.org/266388@main
> Reviewed commits have been landed. Closing PR #16058 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug