Cherry-pick 45a531fbee9a. rdar://problem/112426537

utext_setup() can fail
    https://bugs.webkit.org/show_bug.cgi?id=259468
    rdar://112426537

    Reviewed by Brent Fulgham.

    Simply add a null check.

    We don't know of any content that can cause this, but
    we are getting reports of crashes at this stack trace.
    So I don't know how to make a test :(

    * Source/WTF/wtf/text/icu/TextBreakIteratorICU.h:
    (WTF::TextBreakIteratorICU::TextBreakIteratorICU):
    (WTF::TextBreakIteratorICU::operator=):
    (WTF::TextBreakIteratorICU::setText):

    Canonical link: https://commits.webkit.org/266388@main

Identifier: 265870.256@safari-7616.1.27-branch